[package]
name = "cls_ingress"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
aya = "0.12"
aya-log = "0.2"
clap = { version = "4.1", features = ["derive"] }
cls_ingress-common = { path = "../cls_ingress-common", features = ["user"] }
anyhow = "1"
env_logger = "0.10"
libc = "0.2"
log = "0.4"
tokio = { version = "1.25", features = ["macros", "rt", "rt-multi-thread", "net", "signal"] }
nix = "0.24"

[[bin]]
name = "cls_ingress"
path = "src/main.rs"
